# smart-memory-core

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: auto-bump.yml  ci.yml  publish.yml
docs/plans/: 2026-02-05-extraction-benchmark-findings.md
examples/: README.md  advanced_programming_tutor.py  background_processing_demo.py  conversation_aware_extraction_demo.py  conversational_assistant_example.py  custom_evolver_example.py  custom_extractor_example.py  decision_memory_example.py  demo_hitl_governance.py  environment_check.py  factory_usage_example.py  huggingface_embeddings_example.py  memory_system_usage_example.py  ontology_demo.py  ontology_inference_e2e.py  pipeline_v2_example.py  reasoning_trace_example.py  self_learning_ontology_example.py  temporal_audit_trail.py  temporal_debugging.py  temporal_queries_basic.py  wikilink_demo.py  working_holistic_example.py  zettelkasten_example.py
scripts/: add_license_headers.py  migrate_claude_memory.py  publish-release.sh  push_docs
smartmemory/: __init__.py  __version__.py  cli.py  smart_memory.py
smartmemory/background/: extraction_worker.py  id_resolver.py
smartmemory/clustering/: embedding.py  global_cluster.py
smartmemory/code/: __init__.py  indexer.py  models.py  parser.py  search.py  ts_parser.py
smartmemory/configuration/: environment.py  loader.py  manager.py
smartmemory/corpus/: __init__.py  exporter.py  format.py  importer.py  pack.py  reader.py  rebel.py  registry.py  triplet_parser.py  writer.py
smartmemory/data/: __init__.py  seed_patterns.jsonl
smartmemory/evaluation/: __init__.py  cli.py  dataset.py  judge.py  metrics.py  report.py  runner.py
smartmemory/evolution/: __init__.py  batcher.py  events.py  queue.py  registry.py  router.py  worker.py
smartmemory/graph/: algos.py  compute.py  cypher_algos.py  networkx_algos.py  ontology_graph.py  smartgraph.py
smartmemory/grounding/: benchmark.py  falkordb_store.py  miner.py  models.py  public_knowledge_grounder.py  snapshot.py  sparql_client.py  sqlite_store.py  store.py  type_map.py
smartmemory/inference/: engine.py  rules.py
smartmemory/memory/: canonical_store.py  migrate.py
smartmemory/metrics/: graph_health.py
smartmemory/models/: base.py  memory_item.py  note.py  procedure.py  status.py  user_model.py
smartmemory/observability/: events.py  instrumentation.py  retrieval_tracking.py  tracing.py
smartmemory/ontology/: falkordb_pattern_store.py  governance.py  in_memory_store.py  layered.py  llm_manager.py  manager.py  models.py  pattern_manager.py  registry.py  template_service.py
smartmemory/pipeline/: __init__.py  config.py  metrics_consumer.py  runner.py  state.py
smartmemory/plugins/: base.py  embedding.py  executor.py  manager.py  registry.py  security.py
smartmemory/relations/: __init__.py  benchmark.py  discovery.py  normalizer.py  overlays.py  schema.py  scorer.py  validator.py
smartmemory/retrieval/: ssg_traversal.py
smartmemory/search/: __init__.py  query_decomposer.py  rrf_merge.py
smartmemory/similarity/: enhanced_metrics.py
smartmemory/streams/: __init__.py  pipeline_producer.py
smartmemory/temporal/: context.py  performance.py  queries.py  relationships.py  version_tracker.py
smartmemory/tools/: factory.py  markdown_writer.py
smartmemory/utils/: __init__.py  cache.py
tests/contracts/: test_model_contracts.py
tests/e2e/: test_readme_snippets.py
tests/integration/: test_code_semantic_search.py  test_cross_backend_parity.py  test_extended_type_ingest.py  test_golden_flow.py  test_graph_integrity.py  test_grounding_integration.py  test_ingest_decision_extraction.py  test_ingest_reasoning_extraction.py  test_lite_flow.py  test_lite_golden_flow.py  test_lite_no_network.py  test_new_features.py  test_search_backend_parity.py  test_search_precision.py  test_sqlite_parity.py  test_two_tier_extraction.py
tests/unit/: test_async_falkordb_backend.py  test_cache_override.py  test_classify_routing_sys2_1d.py  test_code_dev2_embeddings.py  test_code_dev6_git_anchor.py  test_code_parser.py  test_code_semantic_search.py  test_config_warnings.py  test_corpus_format.py  test_di_context.py  test_entity_ruler_public_knowledge.py  test_event_sink.py  test_events_calltime.py  test_evolution_events.py  test_evolution_queue.py  test_evolution_router.py  test_evolution_worker.py  test_evolve_stage_skip.py  test_graph_algos.py  test_graph_compute_threadsafe.py  test_grounding_loop.py  test_id_resolver.py  test_ingest_decision_dispatch.py  test_ingest_reasoning_dispatch.py  test_lite_factory_coverage.py  test_lite_install_path.py  test_llm_extract_stage_decisions.py  test_llm_single_decisions.py  test_markdown_writer.py  test_markdown_writer_coverage.py  test_miner.py  test_noop_cache.py  test_pipeline_config_lite.py  test_pipeline_search_stage.py  test_public_knowledge_store.py  test_reasoning_detect_config.py  test_reasoning_detect_stage.py  test_reasoning_flag_wiring.py  (+25 more)
(+149 files in other folders)
