[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmemory-core"
dynamic = ["version"]
description = "Multi-layered AI memory system with graph databases, vector stores, and intelligent processing pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    {name = "SmartMemory Team"}
]
keywords = [
    "ai",
    "memory",
    "graph-database",
    "vector-database",
    "llm",
    "knowledge-graph",
    "semantic-memory",
    "episodic-memory",
    "rag",
    "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "python-dateutil>=2.8.0",
    "spacy>=3.0.0",
    "vaderSentiment>=3.3.0",
    "jinja2>=3.0.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "scikit-learn>=1.0.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "dspy>=3.0.0",
]

[project.optional-dependencies]
# Full server mode: FalkorDB graph database + Redis cache/observability
server = [
    "falkordb>=1.0.0",
    "redis>=4.0.0",
    "requests>=2.28.0",
]

# Optional dependencies for specific extractors
rebel = ["transformers>=4.0.0"]
relik = ["relik>=0.1.0"]

# Optional dependencies for pipeline stages
coreference = ["fastcoref>=2.1.0"]

# Optional dependencies for integrations
# NOTE: claude-cli is a private git dep — install locally with:
#   pip install "claude-cli @ git+ssh://git@github.com/regression-io/claude-cli.git"
slack = ["slack-sdk>=3.0.0"]
aws = ["boto3>=1.26.0"]
wikipedia = ["wikipedia-api>=0.6.0"]
smolagents = ["smolagents>=0.1.0"]

# CLI tools
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0"
]

# Zero-infra lite mode (SQLite + usearch vector backend)
lite = [
    "usearch>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

# Vault watcher (used by `smartmemory watch`)
watch = ["watchdog>=3.0.0"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0"
]

# All optional dependencies
all = [
    "falkordb>=1.0.0",
    "redis>=4.0.0",
    "transformers>=4.0.0",
    "relik>=0.1.0",
    "fastcoref>=2.1.0",
    "slack-sdk>=3.0.0",
    "boto3>=1.26.0",
    "wikipedia-api>=0.6.0",
    "smolagents>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "usearch>=2.0.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/smart-memory/smart-memory"
Documentation = "https://docs.smartmemory.ai"
Repository = "https://github.com/smart-memory/smart-memory"
"Bug Tracker" = "https://github.com/smart-memory/smart-memory/issues"

# Entry points for external plugins
[project.entry-points."smartmemory.plugins.enrichers"]
# External plugins can register here

[project.entry-points."smartmemory.plugins.evolvers"]
# External plugins can register here

[project.entry-points."smartmemory.plugins.extractors"]
# External plugins can register here

[project.entry-points."smartmemory.plugins.grounders"]
# External plugins can register here

[project.scripts]
smartmemory-core = "smartmemory.cli:main"

[tool.setuptools]
packages = {find = {}}  # Auto-discover all packages

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
smartmemory = [
    "py.typed",
    "**/*.json",
    "**/*.jsonl",
    "**/*.yaml",
    "**/*.yml",
    "**/*.sqlite"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=smartmemory --cov-report=term-missing"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "golden: golden flow tests — critical user journeys",
    "contract: schema snapshots, serialization round-trips",
    "invariant: pure-logic unit tests (justified only)",
    "harness: table-driven error path tests",
    "performance: performance tests",
    "slow: slow-running tests",
]
